Updated database methods.
