# src/main/java/org/example/webapitableau/controller/ApiController.java
@@ -1,7 +1,6 @@
 package org.example.webapitableau.controller;
 
 import org.example.webapitableau.api.RecipeApi;
-import org.example.webapitableau.api.RecipesApi;
 import org.example.webapitableau.models.PaginatedRecipes;
 import org.example.webapitableau.models.Recipe;
 import org.example.webapitableau.service.RecipeService;
@@ -11,23 +10,30 @@ import org.springframework.context.annotation.ComponentScan;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
+import java.util.ArrayList;
 import java.util.List;
 
 @RestController
 @ComponentScan(basePackages = { "org.example.webapitableau.*" })
 @EntityScan("org.example.webapitableau.*")
-public class ApiController implements RecipesApi, RecipeApi {
+public class ApiController implements RecipeApi {
 
     @Autowired
     private RecipeService recipeService;
 
     @Override
-    public ResponseEntity<List<Recipe>> getrecipe() {
-        List<Recipe> recipes = recipeService.getAllRecipes();
-        return ResponseEntity.ok(recipes);
+    public ResponseEntity<List<Recipe>> getrecipe(@RequestParam Integer id) {
+        List <Recipe> recipeList = new ArrayList<Recipe>();
+        recipeList.add(recipeService.getRecipe(id));
+        return new ResponseEntity<>(recipeList, HttpStatus.OK);
+
+    }
+
+    @Override
+    public ResponseEntity<PaginatedRecipes> getrecipepage(Integer page, Integer size, String title) {
+        return new ResponseEntity<>(recipeService.page(page,size,title), HttpStatus.OK);
     }
 
     @Override
@@ -37,21 +43,9 @@ public class ApiController implements RecipesApi, RecipeApi {
     }
 
     @Override
-    public ResponseEntity<PaginatedRecipes> getrecipes(Integer page, Integer size) {
-        PaginatedRecipes paginatedRecipes = recipeService.getPaginatedRecipes(page, size);
-        return ResponseEntity.ok(paginatedRecipes);
-    }
-
-    @Override
-    public ResponseEntity<Void> postrecipes(Recipe body) {
-        recipeService.addRecipe(body);
-        return ResponseEntity.status(HttpStatus.CREATED).build();
-    }
-
-    @GetMapping("/search")
-    public ResponseEntity<List<Recipe>> searchRecipes(@RequestParam("title") String title) {
-        List<Recipe> recipes = recipeService.searchRecipesByTitle(title);
-        return ResponseEntity.ok(recipes);
+    public ResponseEntity<Void> putrecipe(@RequestParam Integer id,@RequestParam Recipe body) {
+        recipeService.updateRecipe(id,body);
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 }
 
